# changjuan

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF-ETL.md  mypy.ini  pyproject.toml  ruff.toml
.claude/: settings.local.json
actions/drift-check/: drift_check.py  validate_articles.py
corpora/: dongzhoulieguozhi
curation/: __init__.py  app.py  db.py
curation/components/: __init__.py  coverage_grid.py  records.py  shell.py
curation/pages/: 1_Merge_candidates.py  2_Conflicts.py  3_Low_confidence.py
data/: changjuan.sqlite.phase6-walk-bak  changjuan.sqlite.pre-audit-migration-bak  changjuan.sqlite.pre-ch6-retry-bak  changjuan.sqlite.pre-phase6c-bak  changjuan.sqlite.pre-social-backfill-bak
data/reigns/: sta_cai.yaml  sta_chen.yaml  sta_jin.yaml  sta_qi.yaml  sta_qin.yaml  sta_shen.yaml  sta_song.yaml  sta_wei.yaml  sta_zheng.yaml
knowledge/: index.md  log.md
pipeline/: cli.py  confidence.py  config.py  dates.py  db.py  discovery.py  export_enrich.py  llm_cache.py  qa_sampling.py  reign_table.json  smoke_checks.py  stage1_ingest.py  stage2_chunk.py  stage3_extract.py  stage4_normalize.py  stage7_load.py  stage9_export.py
pipeline/schemas/: __init__.py  canonical_schema.sql  corpus_schema.sql  extract_output.py
scripts/: check-extraction  curator-smoke  discover-states  drift-check  fill-spans  find-span  fix-clan-fields.sql  fix-jin-duplicates.sql  phase2-prep.sh  phase3-prep.sh  phase4-prep.sh  phase5-prep.sh  phase6-prep.sh  read-chapter  regen-extraction-schema  smoke-check-run  validate-articles  validate-golden
tests/: conftest.py
(+157 files in other folders)
