[project]
name = "changjuan"
version = "0.1.0"
description = "Knowledge-graph extraction of Eastern-Zhou history from 《东周列国志》"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
changjuan = "pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "curation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
